<resources>
    <string name="app_name">TurisApp</string>
    <string name="login_txtEmail_hint">Introduce tu e-mail</string>
    <string name="login_txtClave_hint">Introduce tu contraseña</string>
    <string name="login_btnIngreso_text">Ingresar</string>
    <string name="login_btnRegistro_text">Registrarte</string>
    <string name="login_txtNombre_text">TurisApp</string>
    <string name="login_btnRegistrarLugares_text">Registrar sitios turísticos</string>
    <string name="bienvenida_txtNombre_text">TurisApp</string>
    <string name="bienvenida_txtEslogan_text">La App de turismo colombiano</string>
    <string name="bienvenida_txtSaludo_text">Bienvenido, Welcome, Bienvenue, Accoglienza, Willkommen</string>
    <string name="bienvenida_btnContinuar_text">Continuar</string>
    <string name="formulario_txtPrimero_text">Encuentra el lugar ideal para tu proxima aventura</string>
    <string name="formulario_txtLugar_hint">Ingresa el lugar que deseas visitar</string>
    <string name="formulario_txtPresupuesto_text">Selecciona el presupuesto</string>
    <string name="formulario_txtSegundo_text">Selecciona el tipo de turismo que deseas realizar</string>
    <string name="formulario_btnAtras_text">Atras</string>
    <string name="formulario_btnSiguiente_text">Siguente</string>
    <string name="resultado_btnAtras_text">Atras</string>
    <string name="resultado_btnSiguiente_text">Siguiente</string>
    <string name="comentarios_txtTexto1_text">Estos son los comentarios y calificaciones de otros viajeros</string>
    <string name="comnetarios_txtPregunta_text">¿Visitaste este lugar?</string>
    <string name="comentarios_btnRespuesta_text">Sí</string>
    <string name="comentarios_txtTituloComentar_text">Comenta y califica tu experiencia</string>
    <string name="comentarios_txtComentarioUsuario"></string>
    <string name="comentarios_btnAtras">Atras</string>
    <string name="comentarios_btnFinalizar">Finalizar</string>
    <string name="registro_txtNombres_hint">Introduce tu nombre</string>
    <string name="registro_txtApellidos_hint">Introduce tus Apellidos</string>
    <string name="registro_dateFechaNacimiento_hint">Introduce tu fecha de nacimiento</string>
    <string name="registro_emailCorreo_hint">Introduce tu correo</string>
    <string name="registro_pswClave_hint">Introduce una contraseña de mínimo 6 caracteres</string>
    <string name="registro_btnGuardar_text">Guardar</string>
    <string name="registro_btnVolver_text">Volver</string>
    <string name="menuPpalPerfil_BuscarSitiosTuristicos">Buscar sitios turísticos</string>
    <string name="menuPpalPerfil_SitiosVisitados">Ver mis sitios visitados</string>
    <string name="menuPpalPerfil_CerrarSesion">Cerrar sesión</string>
    <string name="perfil_txtBienvenido_text">¡Bienvenido!</string>
    <string name="lugaresvisitados_txtTitulo_text">Has visitado los siguientes lugares</string>
    <string name="lugaresvisitados_btnAtras_text">Atras</string>
    <string name="fragmento1_lugar_txtTitulo">A continuación te recomendamos los siguientes lugares, elije uno y encontraras mayor información</string>
    <string name="fragmento3_lugar_txtTituloDepartamento_text">Departamento</string>
    <string name="fragmento3_lugar_txtDepartamento_text"></string>
    <string name="fragmento3_lugar_txtTituloMunicipio_text">Municipio</string>
    <string name="fragmento3_lugar_txtMunicipio_text"></string>
    <string name="fragmento3_lugar_txtTituloTipo_text">Tipo de turismo</string>
    <string name="fragmento3_lugar_txtTipo_text"></string>
    <string name="fragmento3_lugar_txtTituloPresupuesto_text">Presupuesto</string>
    <string name="fragmento3_lugar_txtPresupuesto_text"></string>
    <string name="fragmento3_lugar_txtTituloComentarios_text">Comentarios generales</string>
    <string name="fragmento3_lugar_txtComentarios_text"></string>
    <string name="fragmento2_lugar_txtComentariosLugar">Aquí van los comentarios del lugar que elija el usuario</string>
    <string name="insertarLugares_txtTitulo_text">Registro de sitios turísticos</string>
    <string name="insertarLugares_txtNombre_text">Ingrese el nombre del sitio turístico</string>
    <string name="insertarLugares_txtDepto_text">Ingrese el departamento del sitio turístico</string>
    <string name="insertarLugares_txtMunicipio_text">Ingrese el municipio del sitio turístico</string>
    <string name="insertarLugares_txtLatitud_text">Ingrese la latitud del sitio turístico</string>
    <string name="insertarLugares_txtLongitud_text">Ingrese la longitud del sitio turístico</string>
    <string name="insertarLugares_txtComentarios_text">Ingrese comentarios generales del sitio turístico</string>
    <string name="insertarLugares_btnAtras_text">Atras</string>
    <string name="insertarLugares_btnGuardar_text">Guardar</string>
    <string name="textview">TextView</string>
    <string name="web_client">1032123605048-isjs8dq10ju6erlasga5g43k1hmap3qu.apps.googleusercontent.com</string>
</resources>
