<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertarLugaresActivity">

    <TextView
        android:id="@+id/insertarLugares_txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:backgroundTint="#00FBFBFB"
        android:gravity="center"
        android:text="@string/insertarLugares_txtTitulo_text"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/insertarLugares_txtNombre"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/insertarLugares_txtNombre_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/insertarLugares_txtDepto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/insertarLugares_txtDepto_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/insertarLugares_txtMunicipio"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/insertarLugares_txtMunicipio_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/insertarLugares_txtLatitud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/insertarLugares_txtLatitud_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/insertarLugares_txtLongitud"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/insertarLugares_txtLongitud_text"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/insertarLugares_spnTipo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/opcionesTuristicas" />

            <Spinner
                android:id="@+id/insertarLugares_spnPresupuesto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/presupuesto" />

            <EditText
                android:id="@+id/insertarLugares_txtComentarios"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/insertarLugares_txtComentarios_text"
                android:inputType="textPersonName" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/insertarLugares_btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/insertarLugares_btnAtras_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/insertarLugares_btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/insertarLugares_btnGuardar_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView7" />

</androidx.constraintlayout.widget.ConstraintLayout>