<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bienvenida">

    <ImageView
        android:id="@+id/bienvenida_imvLogo"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/bienvenida_txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:fontFamily="cursive"
        android:gravity="center"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/bienvenida_txtNombre_text"
        android:textAllCaps="false"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_imvLogo" />

    <TextView
        android:id="@+id/bienvenida_txtEslogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/bienvenida_txtEslogan_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_txtNombre" />

    <EditText
        android:id="@+id/bienvenida_txtSaludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:text="@string/bienvenida_txtSaludo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_txtEslogan" />

    <Button
        android:id="@+id/bienvenida_btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#9C27B0"
        android:text="@string/bienvenida_btnContinuar_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenida_txtSaludo" />

</androidx.constraintlayout.widget.ConstraintLayout>